src/types/tests/snapshots/tgbot__types__tests__business__business_bot_rights-2.snap
---
source: src/types/tests/business.rs
expression: expected_struct.with_can_change_gift_settings(true).with_can_convert_gifts_to_stars(true).with_can_delete_all_messages(true).with_can_delete_outgoing_messages(true).with_can_edit_bio(true).with_can_edit_name(true).with_can_edit_profile_photo(true).with_can_edit_username(true).with_can_manage_stories(true).with_can_read_messages(true).with_can_reply(true).with_can_transfer_and_upgrade_gifts(true).with_can_transfer_stars(true).with_can_view_gifts_and_stars(true)
---
{
  "can_change_gift_settings": true,
  "can_convert_gifts_to_stars": true,
  "can_delete_all_messages": true,
  "can_delete_outgoing_messages": true,
  "can_edit_bio": true,
  "can_edit_name": true,
  "can_edit_profile_photo": true,
  "can_edit_username": true,
  "can_manage_stories": true,
  "can_read_messages": true,
  "can_reply": true,
  "can_transfer_and_upgrade_gifts": true,
  "can_transfer_stars": true,
  "can_view_gifts_and_stars": true
}
