src/types/tests/snapshots/tgbot__types__tests__business__business_connection-2.snap
---
source: src/types/tests/business.rs
expression: "expected_struct.with_rights(BusinessBotRights::default()).with_is_enabled(true)"
---
{
  "date": 0,
  "id": "id",
  "is_enabled": true,
  "user": {
    "first_name": "test",
    "id": 1,
    "is_bot": false
  },
  "user_chat_id": 2,
  "rights": {}
}
