src/types/tests/snapshots/tgbot__types__tests__business__business_intro-2.snap
---
source: src/types/tests/business.rs
expression: "BusinessIntro::default().with_message(\"msg\").with_sticker(Sticker::new(\"file-id\",\n\"file-unique-id\", StickerType::Regular, 512, 512,)).with_title(\"title\")"
---
{
  "message": "msg",
  "sticker": {
    "file_id": "file-id",
    "file_unique_id": "file-unique-id",
    "height": 512,
    "is_animated": false,
    "is_video": false,
    "type": "regular",
    "width": 512
  },
  "title": "title"
}
