src/types/tests/snapshots/tgbot__types__tests__business__business_location.snap
---
source: src/types/tests/business.rs
expression: "BusinessLocation::new(\"address\")"
---
{
  "address": "address"
}
