src/types/tests/snapshots/tgbot__types__tests__business__business_messages_deleted.snap
---
source: src/types/tests/business.rs
expression: "BusinessMessagesDeleted::new(\"id\", PrivateChat::new(1, \"test\"), [2])"
---
{
  "business_connection_id": "id",
  "chat": {
    "type": "private",
    "id": 1,
    "first_name": "test"
  },
  "message_ids": [
    2
  ]
}
