src/types/tests/snapshots/tgbot__types__tests__business__delete_business_messages.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "message_ids": [
    1,
    2,
    3
  ]
}
