src/types/tests/snapshots/tgbot__types__tests__business__delete_story.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "story_id": 1
}
