src/types/tests/snapshots/tgbot__types__tests__business__edit_story.snap
---
source: src/types/tests/business.rs
expression: actual_data
---
{
  "business_connection_id": "id",
  "content": {
    "photo": "url",
    "type": "photo"
  },
  "story_id": 1
}
